# MiniSGBDR

./: CMakeLists.txt  commandes.c  commandes.h  data_types.c  data_types.h  main.c  menu.c  menu.h  pro  query_processor.c  query_processor.h  storage_manager.c  storage_manager.h  table.c  table.h
